tests/baselines/reference/moduleExportsAliasLoop1.errors.txt
tests/cases/conformance/salsa/x.js(1,9): error TS2339: Property 'fn1' does not exist on type 'typeof import("tests/cases/conformance/salsa/x")'.


==== tests/cases/conformance/salsa/x.js (1 errors) ====
    exports.fn1();
            ~~~
!!! error TS2339: Property 'fn1' does not exist on type 'typeof import("tests/cases/conformance/salsa/x")'.
    exports.fn2 = Math.min;
    